--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -9,6 +9,7 @@
         }
     </style>
     <link rel="stylesheet" href="Lesson 1.css">
+    <link rel="stylesheet" href="Lesson 1.css">
 
 </head>
 <body>
