--- a/lesson1/Homework/index.html
+++ b/lesson1/Homework/index.html
@@ -8,8 +8,8 @@
             color: chartreuse;
         }
     </style>
-    <link rel="stylesheet" href="Lesson 1.css">
-    <link rel="stylesheet" href="Lesson 1.css">
+    <link rel="stylesheet" href="Lesson%201.cssss">
+    <link rel="stylesheet" href="Lesson%201.cssss">
 
 </head>
 <body>
